--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "typeorm:run-migrations": "npm run typeorm migration:run -d ./src/config/data-source.ts",
-    "typeorm:generate-migration": "npm run typeorm -d ./src/config/data-source.ts migration:generate ./src/database/migrations/$npm_config_name",
-    "typeorm:create-migration": "npm run typeorm migration:create ./src/database/migrations/$npm_config_name",
-    "typeorm:revert-migration": "npm run typeorm -d ./src/config/data-source.ts migration:revert"
+    "typeorm:generate-migration": "npm run typeorm -- migration:generate -d ./src/config/data-source.ts ./src/database/migrations/$npm_config_name",
+    "typeorm:create-migration": "npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
+    "typeorm:revert-migration": "npm run typeorm -- -d ./src/config/data-source.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
