--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "typeorm:run-migrations": "npm run typeorm migration:run -d ./src/config/data-source.ts",
-    "typeorm:generate-migration": "npm run typeorm -- migration:generate -d ./src/config/data-source.ts ./src/database/migrations/$npm_config_name",
-    "typeorm:create-migration": "npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
+    "typeorm:generate-migration": "cross-var npm run typeorm -- migration:generate -d ./src/config/data-source.ts ./src/database/migrations/$npm_config_name",
+    "typeorm:create-migration": "cross-var npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
     "typeorm:revert-migration": "npm run typeorm -- -d ./src/config/data-source.ts migration:revert"
   },
   "dependencies": {
@@ -31,7 +31,8 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.3",
-    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/typeorm": "^8.0.4",
+    "cross-var": "^1.1.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
