--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "typeorm:run-migrations": "npm run typeorm migration:run -d ./src/config/data-source.ts",
-    "typeorm:generate-migration": "cross-var npm run typeorm -- migration:generate -d ./src/config/data-source.ts ./src/database/migrations/$npm_config_name",
-    "typeorm:create-migration": "cross-var npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
-    "typeorm:revert-migration": "npm run typeorm -- -d ./src/config/data-source.ts migration:revert"
+    "typeorm:run": "npm run build && npm run typeorm -- -d ./src/config/data-source.ts migration:run",
+    "typeorm:generate": "cross-var npm run typeorm -- migration:generate -d ./src/config/data-source.ts ./src/database/migrations/$npm_config_name",
+    "typeorm:create": "cross-var npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
+    "typeorm:revert": "npm run typeorm -- -d ./src/config/data-source.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
