--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "typeorm:run": "npm run build && npm run typeorm -- -d ./src/config/data-source.ts migration:run",
-    "typeorm:generate": "cross-var npm run typeorm -- migration:generate -d ./src/config/data-source.ts ./src/database/migrations/$npm_config_name",
+    "typeorm:run": "npm run build && npm run typeorm -- -d ./src/database/data-source.ts migration:run",
+    "typeorm:generate": "cross-var npm run typeorm -- migration:generate -d ./src/database/data-source.ts ./src/database/migrations/$npm_config_name",
     "typeorm:create": "cross-var npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
-    "typeorm:revert": "npm run typeorm -- -d ./src/config/data-source.ts migration:revert"
+    "typeorm:revert": "npm run typeorm -- -d ./src/database/data-source.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^8.0.4",
+    "class-validator": "^0.13.2",
     "cross-var": "^1.1.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
